--- a/docs/pipeline/index.mdx
+++ b/docs/pipeline/index.mdx
@@ -3,6 +3,7 @@ slug: /pipeline
 sidebar_position: 0
 ---
 
+
 # pipeline
 
 :::info
@@ -11,3 +12,8 @@ sidebar_position: 0
 
 このページは、主に USD やそのほか CG のパイプライン関係の調べた内容を書いていきます。
 （※ほとんど USD です）
+
+<Highlight url="https://twitter.com/fereria/status/1650144519999066117">
+	Docusaurus green
+</Highlight>
+
