--- a/docs/programming/doc_sample.mdx
+++ b/docs/programming/doc_sample.mdx
@@ -1,11 +1,35 @@
 ---
 slug: /sample
+title: ドキュメントサンプル
+sidebar_position: 9999
 ---
 
 import { TwitterTweetEmbed } from "react-twitter-embed";
+import Gist from "react-gist";
+import HelloWorld from "@site/src/components/sample";
 
-# ドキュメントサンプル
+## Twitter を表示する
 
 <TwitterTweetEmbed tweetId={"1650144519999066117"} />
 
 React のコンポーネントが使えるらしい。
+
+:::caution
+
+Some **content** with _Markdown_ `syntax`. Check [this `api`](#).
+
+:::
+
+オリジナルコンポーネントを作成する場合
+
+<HelloWorld />
+
+```javascript
+// こういうタグになっている
+<HelloWorld />
+```
+
+<Gist id="99dd53485029bf20bdb91152e7bc6be8" file="list_test.py" />
+
+Gist の埋め込み。
+これも React のコンポーネント。
