--- a/docs/programming/doc_sample.mdx
+++ b/docs/programming/doc_sample.mdx
@@ -5,6 +5,7 @@ sidebar_position: 9999
 ---
 
 import { TwitterTweetEmbed } from "react-twitter-embed";
+import Codepen from "react-codepen-embed";
 import Gist from "react-gist";
 import HelloWorld from "@site/src/components/sample";
 
@@ -33,3 +34,7 @@ Some **content** with _Markdown_ `syntax`. Check [this `api`](#).
 
 Gist の埋め込み。
 これも React のコンポーネント。
+
+<Codepen hash="xxyqdGG" user="fereria" />
+
+codepen を埋め込みしてみる。
