--- a/docs/programming/doc_sample.mdx
+++ b/docs/programming/doc_sample.mdx
@@ -5,7 +5,6 @@ sidebar_position: 9999
 ---
 
 import { TwitterTweetEmbed } from "react-twitter-embed";
-import Codepen from "react-codepen-embed";
 import Gist from "react-gist";
 import HelloWorld from "@site/src/components/sample";
 
@@ -34,3 +33,5 @@ Some **content** with _Markdown_ `syntax`. Check [this `api`](#).
 
 Gist の埋め込み。
 これも React のコンポーネント。
+
+[Link は slug で指定したパスでも OK](/blog)
