--- a/docs/programming/doc_sample.mdx
+++ b/docs/programming/doc_sample.mdx
@@ -18,16 +18,16 @@ Some **content** with _Markdown_ `syntax`. Check [this `api`](#).
 
 オリジナルコンポーネントを作成する場合
 
-<HelloWorld />
-
-```javascript
-// こういうタグになっている
-<HelloWorld />
-```
-
 <Gist id="99dd53485029bf20bdb91152e7bc6be8" file="list_test.py" />
 
 Gist の埋め込み。
 これも React のコンポーネント。
 
 [Link は slug で指定したパスでも OK](/blog)
+
+<LinkCard
+	title="Sample"
+	description="hoge"
+	link="http://localhost:3000/reincarnation_tech_dev/usd/what_is_usd"
+/>
+aa
