リンク調整

--- a/docs/dcc/Houdini/SOLARIS/layer_flatten.mdx
+++ b/docs/dcc/Houdini/SOLARIS/layer_flatten.mdx
@@ -7,7 +7,7 @@ tags:
 slug: layer_flatten
 ---
 
-[前回](10_edit_layer.md) の Configure ノードを利用することで、自分の意図したところで
+[前回](edit_layer) の Configure ノードを利用することで、自分の意図したところで
 usda ファイルをコントールできることがわかりました。
 ですが、それだけだと USD ファイルに名前をつけて保存はできますが
 レイヤーの数だけ USD ファイルが作成されてしまい、コントロールができなくなってしまいます。
