階層構造を調整する

--- a/docs/programming/doc_sample.mdx
+++ b/docs/programming/doc_sample.mdx
@@ -25,9 +25,5 @@ Gist の埋め込み。
 
 [Link は slug で指定したパスでも OK](/blog)
 
-<LinkCard
-	title="Sample"
-	description="hoge"
-	link="http://localhost:3000/reincarnation_tech_dev/usd/what_is_usd"
-/>
+<LinkCard url="/usd" />
 aa
