--- a/docs/pipeline/usd/introduction/20_asset_info.mdx
+++ b/docs/pipeline/usd/introduction/20_asset_info.mdx
@@ -61,10 +61,10 @@ API 側でもその４つがデフォルトで用意されています。
 
 |                          | 型     |                                                                                                                                                                                                |
 | ------------------------ | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| identifier               | asset  | コンポジションアークでターゲットにする時のファイルパス<br>いわゆるこの AssetInfo が指定されている（自分自身の）ファイルパス                                                                    |
-| name                     | string | アセット名。<br>データベースへのクエリなどに使用                                                                                                                                               |
-| payloadAssetDependencies | asset  | 動的に依存関係を検索するときに使用するアセットがペイロードしているアセットを指定する。、<br>事前にペイロードの依存を計算しておくことで、全部をロードしなくてもアセットの依存関係を把握できる。 |
-| version                  | string | アセットのバージョンを設定する。<br>ShotGrid などでアセットを管理している場合などに、追跡するのに使える                                                                                        |
+| identifier               | asset  | コンポジションアークでターゲットにする時のファイルパス<br/>いわゆるこの AssetInfo が指定されている（自分自身の）ファイルパス                                                                   |
+| name                     | string | アセット名。<br/>データベースへのクエリなどに使用                                                                                                                                              |
+| payloadAssetDependencies | asset  | 動的に依存関係を検索するときに使用するアセットがペイロードしているアセットを指定する。、<br/>事前にペイロードの依存を計算しておくことで、全部をロードしなくてもアセットの依存関係を把握できる。 |
+| version                  | string | アセットのバージョンを設定する。<br/>ShotGrid などでアセットを管理している場合などに、追跡するのに使える                                                                                        |
 
 以上４つです。
 アセットのバージョン管理などは、ShotGrid などといったデータベースを使用することが多いとおもいます。
