Codepenを表示できるようにする

--- a/docs/programming/doc_sample.mdx
+++ b/docs/programming/doc_sample.mdx
@@ -18,6 +18,8 @@ Some **content** with _Markdown_ `syntax`. Check [this `api`](#).
 
 オリジナルコンポーネントを作成する場合
 
+## Gist を表示
+
 <Gist id="99dd53485029bf20bdb91152e7bc6be8" file="list_test.py" />
 
 Gist の埋め込み。
@@ -25,5 +27,6 @@ Gist の埋め込み。
 
 [Link は slug で指定したパスでも OK](/blog)
 
-<LinkCard url="/usd" />
-aa
+## CodePen を表示する
+
+<CodePen user="fereria" slug="qBMPYJN" height={500} />
