--- a/docs/pipeline/usd/programming/python/22_pcp.mdx
+++ b/docs/pipeline/usd/programming/python/22_pcp.mdx
@@ -41,7 +41,7 @@ for spec in prim.GetPrimStack():
 ```
 
 指定の Prim の PrimStack を取得して、その Prim を構築するための Spec を取得する方法つかったり、
-編集対象を取得して切り替える場合は、以前に説明を書いた[EditTarget で Layer を操作する](01_editTarget.md)を利用して
+編集対象を取得して切り替える場合は、以前に説明を書いた[EditTarget で Layer を操作する](/usd/edit_target)を利用して
 編集レイヤーを取得して Target を切り替えて編集する...という手を使うことができます。
 
 しかし、サブレイヤー以外のコンポジションの場合はこの手段を使うことができません。
